<resources>
    <string name="app_name">NanoProject0</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="my_app_port_folio">My App Portfolio</string>
</resources>
